Them quan li user

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3000
+JWT_SECRET=karaoke_admin_secret_2025_supabase_forever_1234567890
+
 DATABASE_URL="postgresql://postgres.wvmulnuypsovlvlnmxxi:superPass@1234@aws-1-ap-south-1.pooler.supabase.com:6543/postgres"
